--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -5,8 +5,8 @@ on:
       - master
       - main
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * 0'
+  #schedule:
+  #  - cron: '0 0 * * 0'
 env:
   LATEX_ROOT: cv
 jobs:
@@ -16,24 +16,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.0
+#      - name: Set up Ruby
+#        uses: ruby/setup-ruby@v1
+#        with:
+#          ruby-version: 3.0
+#
+#      - name: Install dependencies
+#        run: |
+#          gem install nokogiri
+#          gem install bibtex-ruby
+#          # Add any other gem installations or setup commands here
 
-      - name: Install dependencies
-        run: |
-          gem install nokogiri
-          gem install bibtex-ruby
-          # Add any other gem installations or setup commands here
-
-      - name: Generate bibliometrics
-        run: ruby scholar_scraper.rb
-
-      - name: Generate bibliography
-        run: |
-          ruby publications_scraper.rb
-          ruby bibtex_prettifier.rb
+#      - name: Generate bibliometrics
+#        run: ruby scholar_scraper.rb
+#
+#      - name: Generate bibliography
+#        run: |
+#          ruby publications_scraper.rb
+#          ruby bibtex_prettifier.rb
 
       - name: Build latex
         uses: xu-cheng/latex-action@v3
@@ -41,11 +41,11 @@ jobs:
           root_file: ${{ env.LATEX_ROOT }}.tex
           args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape
 
-      - name: Build publication list
-        uses: xu-cheng/latex-action@v3
-        with:
-          root_file: publications_list.tex
-          args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape
+#      - name: Build publication list
+#        uses: xu-cheng/latex-action@v3
+#        with:
+#          root_file: publications_list.tex
+#          args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape
 
       - name: Bump version
         id: bump-version
@@ -78,13 +78,13 @@ jobs:
           asset_name: ${{ env.LATEX_ROOT }}.pdf
           asset_content_type: application/pdf
 
-      - name: Upload Release Asset Publications
-        id: upload-release-asset-publications
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./publications_list.pdf
-          asset_name: publications_list.pdf
-          asset_content_type: application/pdf
+#      - name: Upload Release Asset Publications
+#        id: upload-release-asset-publications
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: ./publications_list.pdf
+#          asset_name: publications_list.pdf
+#          asset_content_type: application/pdf
